# ominin

./: .gitignore  CLAUDE.md  README.md  TACHES-AMBAKA.md
.claude/: CLAUDE.md
.claude/plans/: clip-phase2-espace.md
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py
clipper/: .env.example  pyproject.toml
clipper/clipper/: __main__.py  pipeline.py  schemas.py  worker.py
clipper/clipper/common/: ffmpeg.py  llm.py  settings.py  supabase_client.py
clipper/clipper/judges/: base.py  text_only.py
clipper/clipper/sensors/: base.py  chatsense.py  prosody.py  semantic.py
clipper/clipper/stages/: fuse.py  ingest.py  judge.py  package.py  rank.py  refine.py  reformat.py  sense.py  transcribe.py
clipper/config/: captions.yaml  emotes.yaml  fusion.yaml  markers.yaml  ranking.yaml
clipper/prompts/: classify.md  judge_default.md
docs/: CLAUDE.md  SPEC.md  judge gaming.md  judge podcast.md
frontend/: next.config.ts  package-lock.json  package.json  proxy.ts
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  providers.tsx  robots.ts  sitemap.ts
frontend/lib/: clip-landing-data.ts  landing-data.ts  menu-data.ts  public-menu.ts  site.ts
graphify-out/: .graphify_ast.json  .graphify_chunk_01.json  .graphify_chunk_02.json  .graphify_chunk_03.json  .graphify_chunk_04.json  .graphify_chunk_05.json  .graphify_chunk_06.json  .graphify_detect.json  .graphify_extract.json  .graphify_labels.json  .graphify_python  .graphify_root  .graphify_uncached.txt  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
supabase/: config.toml
(+246 files in other folders)
