[project]
name = "clipper"
version = "0.1.0"
description = "Long-form video → ranked social clips pipeline"
requires-python = ">=3.13"
dependencies = [
    "yt-dlp>=2025.1",
    "anthropic>=0.52",
    "scipy>=1.14",
    "supabase>=2.15",
    "pydantic>=2.11",
    "pydantic-settings>=2.9",
    "pyyaml>=6.0",
    "typer>=0.15",
    "httpx>=0.28",
    "praat-parselmouth>=0.4.7",
    "chat-downloader>=0.2.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
